--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             margin-left: 90px;
             border-width: 0px;
             border-radius: 20px;
+            border-style: solid;
+            border-color: brown;
         }
         p{
             text-align: center;
@@ -63,7 +65,7 @@
     <div class="container">
         <h3>10K CODERS</h3>
         <div class="item">
-            <hr><img src="./my pic.JPG"  width="100px"><hr>
+            <img src="./my pic.JPG"  width="100px">
             <div>
             <div class="text">
                <p>VICKY RAO <br>student</p>
